[gd_scene load_steps=8 format=3 uid="uid://daedxkydy8e3t"]

[ext_resource type="Script" path="res://scripts/TurretT1.gd" id="1_n2l1m"]
[ext_resource type="PackedScene" uid="uid://cwjnmu8k8ofo7" path="res://Scenes/projectile.tscn" id="2_aj4es"]
[ext_resource type="Texture2D" uid="uid://wkubr7bykoyi" path="res://Assets/Turrets/turret_01_mk3.png" id="2_oipwb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4dj0o"]
atlas = ExtResource("2_oipwb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4eilh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dj0o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1hav"]
size = Vector2(40, 78)

[sub_resource type="CircleShape2D" id="CircleShape2D_txas8"]
radius = 257.0

[node name="TurretT1" type="CharacterBody2D"]
z_index = 2
collision_mask = 2
script = ExtResource("1_n2l1m")
Projectile = ExtResource("2_aj4es")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4eilh")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_d1hav")

[node name="TargetLockZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionZone" type="CollisionShape2D" parent="TargetLockZone"]
shape = SubResource("CircleShape2D_txas8")

[node name="ProjectileSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, -72)

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="TargetLockZone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="TargetLockZone" to="." method="_on_area_2d_body_exited"]
